# tool-log-analyzer

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-29-analytics-log-analyzer.md
docs/superpowers/specs/: 2026-05-29-dhis2-log-analyzer-design.md
src/dhis2_log_analyzer/: cli.py  lxc.py
src/dhis2_log_analyzer/parsers/: analytics.py  base.py
src/dhis2_log_analyzer/renderers/: terminal.py
tests/: test_lxc.py  test_terminal.py
tests/parsers/: test_analytics.py  test_base.py
