[project]
name = "dhis2-log-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "plotext>=5.0.0",
]

[project.scripts]
dhis2-analyze-logs = "dhis2_log_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dhis2_log_analyzer"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
